src/snapshots/dbg_pls__tests__debug_generic.snap
---
source: src/lib.rs
expression: "Generic { arg: \"string\" }"
---
pretty:
Generic { arg: "string" }

color:
[38;2;102;217;239mGeneric[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m arg[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mstring[38;2;230;219;116m"[38;2;248;248;242m [38;2;248;248;242m}[0m

