src/snapshots/dbg_pls__tests__debug_map.snap
---
source: src/lib.rs
expression: "BTreeMap::from([(\"hello\", 60), (\"Hello, world! I am a very long string\", 12)])"
---
{
    ["Hello, world! I am a very long string"] = 12;
    ["hello"] = 60;
}
