src/snapshots/dbg_pls__tests__debug_nested_struct.snap
---
source: src/lib.rs
expression: "{\n    let mut val = [Demo { foo: 5, bar: \"hello\" }; 10];\n    val[6].bar = \"Hello, world! I am a very long string\";\n    val\n}"
---
pretty:
[
    Demo { foo: 5, bar: "hello" },
    Demo { foo: 5, bar: "hello" },
    Demo { foo: 5, bar: "hello" },
    Demo { foo: 5, bar: "hello" },
    Demo { foo: 5, bar: "hello" },
    Demo { foo: 5, bar: "hello" },
    Demo {
        foo: 5,
        bar: "Hello, world! I am a very long string",
    },
    Demo { foo: 5, bar: "hello" },
    Demo { foo: 5, bar: "hello" },
    Demo { foo: 5, bar: "hello" },
]

color:
[38;2;248;248;242m[[38;2;248;248;242m
[38;2;248;248;242m    [38;2;102;217;239mDemo[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m5[38;2;248;248;242m,[38;2;248;248;242m bar[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mhello[38;2;230;219;116m"[38;2;248;248;242m [38;2;248;248;242m}[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    [38;2;102;217;239mDemo[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m5[38;2;248;248;242m,[38;2;248;248;242m bar[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mhello[38;2;230;219;116m"[38;2;248;248;242m [38;2;248;248;242m}[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    [38;2;102;217;239mDemo[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m5[38;2;248;248;242m,[38;2;248;248;242m bar[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mhello[38;2;230;219;116m"[38;2;248;248;242m [38;2;248;248;242m}[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    [38;2;102;217;239mDemo[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m5[38;2;248;248;242m,[38;2;248;248;242m bar[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mhello[38;2;230;219;116m"[38;2;248;248;242m [38;2;248;248;242m}[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    [38;2;102;217;239mDemo[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m5[38;2;248;248;242m,[38;2;248;248;242m bar[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mhello[38;2;230;219;116m"[38;2;248;248;242m [38;2;248;248;242m}[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    [38;2;102;217;239mDemo[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m5[38;2;248;248;242m,[38;2;248;248;242m bar[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mhello[38;2;230;219;116m"[38;2;248;248;242m [38;2;248;248;242m}[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    [38;2;102;217;239mDemo[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m
[38;2;248;248;242m        foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m5[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m        bar[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mHello, world! I am a very long string[38;2;230;219;116m"[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    [38;2;248;248;242m}[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    [38;2;102;217;239mDemo[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m5[38;2;248;248;242m,[38;2;248;248;242m bar[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mhello[38;2;230;219;116m"[38;2;248;248;242m [38;2;248;248;242m}[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    [38;2;102;217;239mDemo[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m5[38;2;248;248;242m,[38;2;248;248;242m bar[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mhello[38;2;230;219;116m"[38;2;248;248;242m [38;2;248;248;242m}[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    [38;2;102;217;239mDemo[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m foo[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m5[38;2;248;248;242m,[38;2;248;248;242m bar[38;2;248;248;242m:[38;2;248;248;242m [38;2;230;219;116m"[38;2;230;219;116mhello[38;2;230;219;116m"[38;2;248;248;242m [38;2;248;248;242m}[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m][0m

