src/snapshots/dbg_pls__tests__debug_recursive.snap
---
source: src/lib.rs
expression: "LinkedList {\n    value: 0_i32,\n    next: Some(Box::new(LinkedList { value: 1_i32, next: None })),\n}"
---
LinkedList {
    value: 0,
    next: Some(LinkedList { value: 1, next: None }),
}
