src/snapshots/dbg_pls__tests__debug_recursive2.snap
---
source: src/lib.rs
expression: "LinkedList2 {\n    value: 0_i32,\n    next: Some(Box::new(LinkedList2 { value: 1_i32, next: None })),\n}"
---
pretty:
LinkedList2 {
    value: 0,
    next: Some(LinkedList2 {
        value: 1,
        next: None,
    }),
}

color:
[38;2;102;217;239mLinkedList2[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m
[38;2;248;248;242m    value[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m0[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    next[38;2;248;248;242m:[38;2;248;248;242m [38;2;166;226;46mSome[38;2;248;248;242m([38;2;102;217;239mLinkedList2[38;2;248;248;242m [38;2;248;248;242m{[38;2;248;248;242m
[38;2;248;248;242m        value[38;2;248;248;242m:[38;2;248;248;242m [38;2;190;132;255m1[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m        next[38;2;248;248;242m:[38;2;248;248;242m [38;2;166;226;46mNone[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m    [38;2;248;248;242m}[38;2;248;248;242m)[38;2;248;248;242m,[38;2;248;248;242m
[38;2;248;248;242m}[0m

