src/snapshots/dbg_pls__tests__debug_struct.snap
---
source: src/lib.rs
expression: "Demo { foo: 5, bar: \"hello\" }"
---
Demo { foo: 5, bar: "hello" }
